tests/diagnostics/tests/ui/missing_bake_content.rs
// An empty recipe.

use granola::prelude::*;

#[derive(Default, Debug, Clone)]
struct BrokenRecipe;

impl SpanRecipe for BrokenRecipe {}

fn main() {}
